Dmc2610Demo/VC.NET/dmc2610_demo/DMC2610.h

typedef unsigned short      WORD;
typedef int			   INT32S;                  /* defined for signed 32-bits integer variable 		有符号32位整型变量 */
//手轮运动
DMC2610_API void __stdcall d2610_set_handwheel_inmode(WORD axis,WORD inmode,WORD count_dir);
/********************************************************************************
** 函数名称: d2610_config_encoder_filter
** 功能描述: 配置编码器EA, EB, EZ的滤波器参数，各轴单独配置
** 输　  入: axis : 轴号, 多卡运行时轴号依次往后排, 如第二张卡: 轴号(4 - 7) 
             WORD width: 0-255;  范围可配置为 8MHZ ~ 32K Hz, 高于设定频率的信号会被滤掉.
                  滤波频率的计算: f = 8M Hz / (width + 1) 
** 返 回 值: 无
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_encoder_filter(WORD axis,WORD width, WORD enable);
//增加同时起停操作
/********************************************************************************
** 函数名称: d2610_set_t_move_all
** 功能描述: 多轴同步运动设定
** 输　  入: TotalAxes: 轴数,  pAxis:轴列表, pDist:位移列表
             posi_mode: 0-相对, 1-绝对
** 返 回 值: 1:正确 , -1:参数错
*********************************************************************************/
INT32S __stdcall d2610_set_t_move_all(WORD TotalAxes, WORD *pAxis, long *pDist, WORD posi_mode);
/********************************************************************************
** 函数名称: d2610_start_move_all
** 功能描述: 多轴同步运动
** 输　  入: TotalAxes: 第一轴轴号
** 返 回 值: 1:正确 , -1:参数错  
*********************************************************************************/
INT32S __stdcall d2610_start_move_all(WORD FirstAxis);
/********************************************************************************
** 函数名称: d2610_set_sync_option
** 功能描述: 多轴同步选项设定, 注意: 使用后必须关闭此功能, 将sync_option1清0.
** 输　  入: axis:轴号
             sync_stop_on: 1:当CSTOP 信号来时,轴停止; 
             cstop_output_on: 当异常停止时输出 CSTOP信号
             sync_option1: 0:立即启动, 1: 等待CSTA信号 或是启动命令 
             sync_option2: 无用
** 返 回 值: 1:正确 , -1:参数错
**    
*********************************************************************************/
INT32S __stdcall d2610_set_sync_option(WORD axis, WORD sync_stop_on, WORD cstop_output_on, WORD sync_option1, WORD sync_option2);
/********************************************************************************
** 函数名称: d2610_set_sync_stop_mode
** 功能描述: 设置同步停止的减速方式
** 输　  入: axis: 轴号
             stop_mode:  0- 立即停止, 1-减速停止
** 返 回 值: 1:正确 , -1:参数错    
*********************************************************************************/
INT32S __stdcall d2610_set_sync_stop_mode(WORD axis, WORD stop_mode);
 

/********************************************************************************
** 函数名称: d2610_config_CSTA_PIN
** 功能描述: 设置同步启动信号, 只能为低有效, 配置为电平或是边沿信号触发,默认为电平触发
** 输　  入: axis: 轴号
             edge_mode:  0- 电平, 1-边沿
** 返 回 值: 1   
*********************************************************************************/
INT32S __stdcall d2610_config_CSTA_PIN(WORD axis, WORD edge_mode);
//设置脉冲当量和相关操作
INT32S __stdcall d2610_get_equiv(WORD axis, double *equiv);
INT32S __stdcall d2610_set_equiv(WORD axis, double new_equiv);
INT32S __stdcall d2610_get_position_unitmm(WORD axis, double * pos_by_mm);
INT32S __stdcall d2610_set_position_unitmm(WORD axis, double pos_by_mm);
INT32S __stdcall d2610_read_current_speed_unitmm(WORD axis, double *current_speed);
INT32S __stdcall d2610_get_encoder_unitmm(WORD axis, double *encoder_pos_by_mm);
INT32S __stdcall d2610_set_encoder_unitmm(WORD axis, double encoder_pos_by_mm);
void __stdcall d2610_arc_move_unitmm(WORD *axis,double *target_pos, double *cen_pos, WORD arc_dir);
void __stdcall d2610_rel_arc_move_unitmm(WORD *axis, double *rel_pos, double *rel_cen, WORD arc_dir);
//脉冲闭环操作
INT32S __stdcall d2610_pulse_loop(WORD axis);
   


/********************************************************************************
** 函数名称: d2610_set_handwheel_inmode
** 功能描述: //手轮输入方式的允许
** 输　  入: 0:关闭， 1：打开 ，其他： 无操作
** 返 回 值: 无 
*********************************************************************************/
DMC2610_API void __stdcall d2610_enable_handwheel(WORD axis,WORD hand_enable);
/********************************************************************************
** 函数名称: d2610_config_handle_freq
** 功能描述: 手轮脉冲的输出频率设置
**            
** 输　  入: cardno: 卡号, 
**           freq: 对应到手轮的脉冲输出频率设置， 可设置为： 20 - 255                   
              对应的输出频率值为： f = 750 KHz / freq
			  默认值为75, 即频率为10K. 
** 返 回 值: 无 
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_handle_freq(WORD cardno, WORD freq);
/********************************************************************************
** 函数名称: d2610_config_handle_multi
** 功能描述: 手轮脉冲的倍率设置
**            
** 输　  入: cardno: 卡号, 
**           multi: 手轮脉冲的倍率设置， 可设置为： 1 - 127, 默认值为1
                例，当multi = 2时，即输入一个脉冲，会输出2个脉冲
** 返 回 值: 无 
*********************************************************************************/
DMC2610_API void __stdcall d2610_config_handle_multi(WORD cardno, WORD multi);