DrilTapeTest1/DrilTapeTest1/DMC2610.cs


        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_encoder_filter", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_encoder_filter(UInt16 axis, UInt16 width, UInt16 enable);


        //增加同时起停操作
        /********************************************************************************
        ** 函数名称: d2610_set_t_move_all
        ** 功能描述: 多轴同步运动设定
        ** 输　  入: TotalAxes: 轴数,  pAxis:轴列表, pDist:位移列表
                     posi_mode: 0-相对, 1-绝对
        ** 返 回 值: 1:正确 , -1:参数错
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_t_move_all", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_t_move_all(UInt16 TotalAxes, ref UInt16 pAxis, ref Int32 pDist, UInt16 posi_mode);

        /********************************************************************************
        ** 函数名称: d2610_start_move_all
        ** 功能描述: 多轴同步运动
        ** 输　  入: TotalAxes: 第一轴轴号
        ** 返 回 值: 1:正确 , -1:参数错  
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_start_move_all", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_start_move_all(UInt16 FirstAxis);

        /********************************************************************************
        ** 函数名称: d2610_set_sync_option
        ** 功能描述: 多轴同步选项设定, 注意: 使用后必须关闭此功能, 将sync_option1清0.
        ** 输　  入: axis:轴号
                     sync_stop_on: 1:当CSTOP 信号来时,轴停止; 
                     cstop_output_on: 当异常停止时输出 CSTOP信号
                     sync_option1: 0:立即启动, 1: 等待CSTA信号 或是启动命令 
                     sync_option2: 无用
        ** 返 回 值: 1:正确 , -1:参数错
        **    
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_sync_option", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_sync_option(UInt16 axis, UInt16 sync_stop_on, UInt16 cstop_output_on, UInt16 sync_option1, UInt16 sync_option2);

        /********************************************************************************
        ** 函数名称: d2610_set_sync_stop_mode
        ** 功能描述: 设置同步停止的减速方式
        ** 输　  入: axis: 轴号
                     stop_mode:  0- 立即停止, 1-减速停止
        ** 返 回 值: 1:正确 , -1:参数错    
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_sync_stop_mode", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_sync_stop_mode(UInt16 axis, UInt16 stop_mode);

        /********************************************************************************
        ** 函数名称: d2610_config_CSTA_PIN
        ** 功能描述: 设置同步启动信号, 只能为低有效, 配置为电平或是边沿信号触发,默认为电平触发
        ** 输　  入: axis: 轴号
                     edge_mode:  0- 电平, 1-边沿
        ** 返 回 值: 1   
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_CSTA_PIN", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_config_CSTA_PIN(UInt16 axis, UInt16 edge_mode);

        //设置脉冲当量和相关操作

        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_equiv", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_equiv(UInt16 axis, ref double equiv);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_equiv", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_equiv(UInt16 axis, double new_equiv);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_position_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_position_unitmm(UInt16 axis, ref double pos_by_mm);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_position_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_position_unitmm(UInt16 axis, double pos_by_mm);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_read_current_speed_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_read_current_speed_unitmm(UInt16 axis, ref double current_speed);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_get_encoder_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_get_encoder_unitmm(UInt16 axis, ref double encoder_pos_by_mm);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_set_encoder_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_set_encoder_unitmm(UInt16 axis, double encoder_pos_by_mm);


        [DllImport("DMC2610.dll", EntryPoint = "d2610_arc_move_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_arc_move_unitmm(ref UInt16 axis, ref double target_pos, ref double cen_pos, UInt16 arc_dir);

        [DllImport("DMC2610.dll", EntryPoint = "d2610_rel_arc_move_unitmm", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_rel_arc_move_unitmm(ref UInt16 axis, ref double rel_pos, ref double rel_cen, UInt16 arc_dir);


        //脉冲闭环操作

        [DllImport("DMC2610.dll", EntryPoint = "d2610_pulse_loop", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern Int32 d2610_pulse_loop(UInt16 axis);


        /********************************************************************************
        ** 函数名称: d2610_set_handwheel_inmode
        ** 功能描述: //手轮输入方式的允许
        ** 输　  入: 0:关闭， 1：打开 ，其他： 无操作
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_enable_handwheel", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_enable_handwheel(UInt16 axis, UInt16 hand_enable);

        /********************************************************************************
        ** 函数名称: d2610_config_handle_freq
        ** 功能描述: 手轮脉冲的输出频率设置
        **            
        ** 输　  入: cardno: 卡号, 
        **           freq: 对应到手轮的脉冲输出频率设置， 可设置为： 20 - 255                   
                      对应的输出频率值为： f = 750 KHz / freq
			          默认值为75, 即频率为10K. 
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_handle_freq", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_handle_freq(UInt16 cardno, UInt16 freq);

        /********************************************************************************
        ** 函数名称: d2610_config_handle_multi
        ** 功能描述: 手轮脉冲的倍率设置
        **            
        ** 输　  入: cardno: 卡号, 
        **           multi: 手轮脉冲的倍率设置， 可设置为： 1 - 127, 默认值为1
                        例，当multi = 2时，即输入一个脉冲，会输出2个脉冲
        ** 返 回 值: 无 
        *********************************************************************************/

        [DllImport("DMC2610.dll", EntryPoint = "d2610_config_handle_multi", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.StdCall)]
        public static extern void d2610_config_handle_multi(UInt16 cardno, UInt16 multi);





        //PC库错误码
        enum ERR_CODE_DMC
        {
            ERR_NOERR = 0,          //成功      
            ERR_UNKNOWN = 1,
            ERR_PARAERR = 2,

            ERR_TIMEOUT = 3,
            ERR_CONTROLLERBUSY = 4,
            ERR_CONNECT_TOOMANY = 5,

            ERR_CONTILINE = 40,
            ERR_CANNOT_CONNECTETH = 8,
            ERR_HANDLEERR = 9,
            ERR_SENDERR = 10,
            ERR_FIRMWAREERR = 12, //固件文件错误
            ERR_FIRMWAR_MISMATCH = 14, //固件不匹配

            ERR_FIRMWARE_INVALID_PARA = 20,  //固件参数错误
            ERR_FIRMWARE_PARA_ERR = 20,  //固件参数错误2
            ERR_FIRMWARE_STATE_ERR = 22, //固件当前状态不允许操作
            ERR_FIRMWARE_LIB_STATE_ERR = 22, //固件当前状态不允许操作2
            ERR_FIRMWARE_CARD_NOT_SUPPORT = 24,  //固件不支持的功能 控制器不支持的功能
            ERR_FIRMWARE_LIB_NOTSUPPORT = 24,    //固件不支持的功能2
        };

    }
}